...
            modifier = Modifier.testTag("ReceiptList").fillMaxSize(),
            verticalArrangement = Arrangement.spacedBy(0.dp, Alignment.Top),
            horizontalAlignment = Alignment.CenterHorizontally) {
              // Header for the user receipts
              item {
                Text(
                    text = "My Receipts",
                    style = MaterialTheme.typography.titleMedium,
                    modifier = Modifier.fillMaxWidth().padding(vertical = 16.dp))
                HorizontalDivider()
              }

              if (viewmodelState.userReceipts.isNotEmpty()) {
...
              if (viewmodelState.allReceipts.isNotEmpty() &&
                  (viewmodelState.userCurrentRole.type == RoleType.TREASURY ||
                      viewmodelState.userCurrentRole.type == RoleType.PRESIDENCY)) {
                // Header for the global receipts
                item {
                  Text(
                      text = "All Receipts",
                      style = MaterialTheme.typography.titleMedium,
                      modifier = Modifier.fillMaxWidth().padding(vertical = 16.dp))
                  HorizontalDivider()
                }
                // Second list of receipts
                viewmodelState.allReceipts.forEach { receipt ->
...
